Add support to query multiple properties
